Fixed some bugs with the navbar notifications mobile view invisible clicking

--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -134,25 +134,30 @@
             width: 2.5rem;
             color: white;
             position: relative;
+            margin-right: 1.5rem;
+            cursor: pointer;
 
-                .chat {
-                    font-size: 2.5rem;
-                    visibility: hidden;
-                }
-    
-                .chat--notification {
-                    font-size: 1rem;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    position: absolute;
-                    top: -.5rem;
-                    right: -2rem;
-                    background-color: red;
-                    width: 1.5rem;
-                    height: 1.5rem;
-                    border-radius: 50%;
-                }
+            .chat {
+                font-size: 2.5rem;
+                visibility: hidden;
+                width: 0;
+                height: 0;
+            }
+
+            .chat--notification {
+                font-size: 1rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: absolute;
+                top: -.5rem;
+                right: -2rem;
+                background-color: red;
+                width: 1.5rem;
+                height: 1.5rem;
+                border-radius: 50%;
+                visibility: hidden;
+            }
         }
 
         span {
@@ -160,10 +165,7 @@
             cursor: pointer;
         }
         
-        a {
-            margin-right: 1.5rem;
-            cursor: pointer;
-
+        .navbar-image-container {
             .navbar-image {
                 width: 3rem;
                 height: 3rem;
@@ -186,6 +188,12 @@
             a {
                 .chat {
                     visibility: visible;
+                    width: 2.5rem;
+                    height: 2.5rem;
+                }
+
+                .chat--notification {
+                    visibility: visible
                 }
             }
         }
